y.output
Terminals unused in grammar

   OR
   ASSIGN


State 69 conflicts: 18 reduce/reduce
State 105 conflicts: 18 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: body

    2 function: head body tail

    3 head: FUNC tIDENTIFIER '(' par_decl_list ')' ':' type

    4 tail: END tIDENTIFIER

    5 type: tIDENTIFIER
    6     | INT
    7     | BOOL
    8     | ARRAY_OF type
    9     | RECORD_OF '{' var_decl_list '}'

   10 par_decl_list: var_decl_list
   11              | %empty

   12 var_decl_list: var_type ',' var_decl_list
   13              | var_type

   14 var_type: tIDENTIFIER ':' type

   15 body: decl_list statement_list

   16 decl_list: declaration decl_list
   17          | %empty

   18 declaration: TYPE tIDENTIFIER '=' type ';'
   19            | function
   20            | VAR var_decl_list ';'

   21 statement_list: statement
   22               | statement statement_list

   23 statement: RETURN expression ';'
   24          | WRITE expression ';'
   25          | ALLOCATE variable ';'
   26          | ALLOCATE variable OF_LENGTH expression ';'
   27          | variable '=' expression ';'
   28          | IF expression THEN statement
   29          | IF expression THEN statement ELSE statement
   30          | WHILE expression DO statement
   31          | '{' statement_list '}'

   32 variable: tIDENTIFIER
   33         | variable '[' expression ']'
   34         | variable '.' tIDENTIFIER

   35 expression: expression '+' expression
   36           | expression '-' expression
   37           | expression '*' expression
   38           | expression '/' expression
   39           | '(' expression ')'
   40           | expression EQ expression
   41           | expression NEQ expression
   42           | expression GT expression
   43           | expression LT expression
   44           | expression GEQ expression
   45           | expression LEQ expression
   46           | expression AND expression
   47           | expression '|' '|' expression
   48           | '-' expression
   49           | term

   50 term: tINTCONST
   51     | '-' tINTCONST
   52     | '(' expression ')'
   53     | '!' term
   54     | '|' expression '|'
   55     | TRUE
   56     | FALSE
   57     | _NULL
   58     | variable
   59     | tIDENTIFIER '(' act_list ')'

   60 act_list: exp_list
   61         | %empty

   62 exp_list: expression
   63         | expression ',' exp_list


Terminals, with rules where they appear

$end (0) 0
'!' (33) 53
'(' (40) 3 39 52 59
')' (41) 3 39 52 59
'*' (42) 37
'+' (43) 35
',' (44) 12 63
'-' (45) 36 48 51
'.' (46) 34
'/' (47) 38
':' (58) 3 14
';' (59) 18 20 23 24 25 26 27
'=' (61) 18 27
'[' (91) 33
']' (93) 33
'{' (123) 9 31
'|' (124) 47 54
'}' (125) 9 31
error (256)
tINTCONST (258) 50 51
tIDENTIFIER (259) 3 4 5 14 18 32 34 59
EQ (260) 40
NEQ (261) 41
LEQ (262) 45
GEQ (263) 44
LT (264) 43
GT (265) 42
IF (266) 28 29
ELSE (267) 29
WHILE (268) 30
RETURN (269) 23
AND (270) 46
OR (271)
ASSIGN (272)
TRUE (273) 55
FALSE (274) 56
_NULL (275) 57
FUNC (276) 3
END (277) 4
INT (278) 6
BOOL (279) 7
ARRAY_OF (280) 8
RECORD_OF (281) 9
TYPE (282) 18
VAR (283) 20
OF_LENGTH (284) 26
THEN (285) 28 29
WRITE (286) 24
ALLOCATE (287) 25 26
DO (288) 30
NEG (289)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
function (54)
    on left: 2, on right: 19
head (55)
    on left: 3, on right: 2
tail (56)
    on left: 4, on right: 2
type (57)
    on left: 5 6 7 8 9, on right: 3 8 14 18
par_decl_list (58)
    on left: 10 11, on right: 3
var_decl_list (59)
    on left: 12 13, on right: 9 10 12 20
var_type (60)
    on left: 14, on right: 12 13
body (61)
    on left: 15, on right: 1 2
decl_list (62)
    on left: 16 17, on right: 15 16
declaration (63)
    on left: 18 19 20, on right: 16
statement_list (64)
    on left: 21 22, on right: 15 22 31
statement (65)
    on left: 23 24 25 26 27 28 29 30 31, on right: 21 22 28 29 30
variable (66)
    on left: 32 33 34, on right: 25 26 27 33 34 58
expression (67)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49, on right:
    23 24 26 27 28 29 30 33 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 52 54 62 63
term (68)
    on left: 50 51 52 53 54 55 56 57 58 59, on right: 49 53
act_list (69)
    on left: 60 61, on right: 59
exp_list (70)
    on left: 62 63, on right: 60 63


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    TYPE  shift, and go to state 2
    VAR   shift, and go to state 3

    $default  reduce using rule 17 (decl_list)

    program      go to state 4
    function     go to state 5
    head         go to state 6
    body         go to state 7
    decl_list    go to state 8
    declaration  go to state 9


State 1

    3 head: FUNC . tIDENTIFIER '(' par_decl_list ')' ':' type

    tIDENTIFIER  shift, and go to state 10


State 2

   18 declaration: TYPE . tIDENTIFIER '=' type ';'

    tIDENTIFIER  shift, and go to state 11


State 3

   20 declaration: VAR . var_decl_list ';'

    tIDENTIFIER  shift, and go to state 12

    var_decl_list  go to state 13
    var_type       go to state 14


State 4

    0 $accept: program . $end

    $end  shift, and go to state 15


State 5

   19 declaration: function .

    $default  reduce using rule 19 (declaration)


State 6

    2 function: head . body tail

    FUNC  shift, and go to state 1
    TYPE  shift, and go to state 2
    VAR   shift, and go to state 3

    $default  reduce using rule 17 (decl_list)

    function     go to state 5
    head         go to state 6
    body         go to state 16
    decl_list    go to state 8
    declaration  go to state 9


State 7

    1 program: body .

    $default  reduce using rule 1 (program)


State 8

   15 body: decl_list . statement_list

    tIDENTIFIER  shift, and go to state 17
    IF           shift, and go to state 18
    WHILE        shift, and go to state 19
    RETURN       shift, and go to state 20
    WRITE        shift, and go to state 21
    ALLOCATE     shift, and go to state 22
    '{'          shift, and go to state 23

    statement_list  go to state 24
    statement       go to state 25
    variable        go to state 26


State 9

   16 decl_list: declaration . decl_list

    FUNC  shift, and go to state 1
    TYPE  shift, and go to state 2
    VAR   shift, and go to state 3

    $default  reduce using rule 17 (decl_list)

    function     go to state 5
    head         go to state 6
    decl_list    go to state 27
    declaration  go to state 9


State 10

    3 head: FUNC tIDENTIFIER . '(' par_decl_list ')' ':' type

    '('  shift, and go to state 28


State 11

   18 declaration: TYPE tIDENTIFIER . '=' type ';'

    '='  shift, and go to state 29


State 12

   14 var_type: tIDENTIFIER . ':' type

    ':'  shift, and go to state 30


State 13

   20 declaration: VAR var_decl_list . ';'

    ';'  shift, and go to state 31


State 14

   12 var_decl_list: var_type . ',' var_decl_list
   13              | var_type .

    ','  shift, and go to state 32

    $default  reduce using rule 13 (var_decl_list)


State 15

    0 $accept: program $end .

    $default  accept


State 16

    2 function: head body . tail

    END  shift, and go to state 33

    tail  go to state 34


State 17

   32 variable: tIDENTIFIER .

    $default  reduce using rule 32 (variable)


State 18

   28 statement: IF . expression THEN statement
   29          | IF . expression THEN statement ELSE statement

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    variable    go to state 44
    expression  go to state 45
    term        go to state 46


State 19

   30 statement: WHILE . expression DO statement

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    variable    go to state 44
    expression  go to state 47
    term        go to state 46


State 20

   23 statement: RETURN . expression ';'

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    variable    go to state 44
    expression  go to state 48
    term        go to state 46


State 21

   24 statement: WRITE . expression ';'

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    variable    go to state 44
    expression  go to state 49
    term        go to state 46


State 22

   25 statement: ALLOCATE . variable ';'
   26          | ALLOCATE . variable OF_LENGTH expression ';'

    tIDENTIFIER  shift, and go to state 17

    variable  go to state 50


State 23

   31 statement: '{' . statement_list '}'

    tIDENTIFIER  shift, and go to state 17
    IF           shift, and go to state 18
    WHILE        shift, and go to state 19
    RETURN       shift, and go to state 20
    WRITE        shift, and go to state 21
    ALLOCATE     shift, and go to state 22
    '{'          shift, and go to state 23

    statement_list  go to state 51
    statement       go to state 25
    variable        go to state 26


State 24

   15 body: decl_list statement_list .

    $default  reduce using rule 15 (body)


State 25

   21 statement_list: statement .
   22               | statement . statement_list

    tIDENTIFIER  shift, and go to state 17
    IF           shift, and go to state 18
    WHILE        shift, and go to state 19
    RETURN       shift, and go to state 20
    WRITE        shift, and go to state 21
    ALLOCATE     shift, and go to state 22
    '{'          shift, and go to state 23

    $default  reduce using rule 21 (statement_list)

    statement_list  go to state 52
    statement       go to state 25
    variable        go to state 26


State 26

   27 statement: variable . '=' expression ';'
   33 variable: variable . '[' expression ']'
   34         | variable . '.' tIDENTIFIER

    '='  shift, and go to state 53
    '['  shift, and go to state 54
    '.'  shift, and go to state 55


State 27

   16 decl_list: declaration decl_list .

    $default  reduce using rule 16 (decl_list)


State 28

    3 head: FUNC tIDENTIFIER '(' . par_decl_list ')' ':' type

    tIDENTIFIER  shift, and go to state 12

    $default  reduce using rule 11 (par_decl_list)

    par_decl_list  go to state 56
    var_decl_list  go to state 57
    var_type       go to state 14


State 29

   18 declaration: TYPE tIDENTIFIER '=' . type ';'

    tIDENTIFIER  shift, and go to state 58
    INT          shift, and go to state 59
    BOOL         shift, and go to state 60
    ARRAY_OF     shift, and go to state 61
    RECORD_OF    shift, and go to state 62

    type  go to state 63


State 30

   14 var_type: tIDENTIFIER ':' . type

    tIDENTIFIER  shift, and go to state 58
    INT          shift, and go to state 59
    BOOL         shift, and go to state 60
    ARRAY_OF     shift, and go to state 61
    RECORD_OF    shift, and go to state 62

    type  go to state 64


State 31

   20 declaration: VAR var_decl_list ';' .

    $default  reduce using rule 20 (declaration)


State 32

   12 var_decl_list: var_type ',' . var_decl_list

    tIDENTIFIER  shift, and go to state 12

    var_decl_list  go to state 65
    var_type       go to state 14


State 33

    4 tail: END . tIDENTIFIER

    tIDENTIFIER  shift, and go to state 66


State 34

    2 function: head body tail .

    $default  reduce using rule 2 (function)


State 35

   50 term: tINTCONST .

    $default  reduce using rule 50 (term)


State 36

   32 variable: tIDENTIFIER .
   59 term: tIDENTIFIER . '(' act_list ')'

    '('  shift, and go to state 67

    $default  reduce using rule 32 (variable)


State 37

   55 term: TRUE .

    $default  reduce using rule 55 (term)


State 38

   56 term: FALSE .

    $default  reduce using rule 56 (term)


State 39

   57 term: _NULL .

    $default  reduce using rule 57 (term)


State 40

   54 term: '|' . expression '|'

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    variable    go to state 44
    expression  go to state 68
    term        go to state 46


State 41

   48 expression: '-' . expression
   51 term: '-' . tINTCONST

    tINTCONST    shift, and go to state 69
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    variable    go to state 44
    expression  go to state 70
    term        go to state 46


State 42

   39 expression: '(' . expression ')'
   52 term: '(' . expression ')'

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    variable    go to state 44
    expression  go to state 71
    term        go to state 46


State 43

   53 term: '!' . term

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 72
    '('          shift, and go to state 73
    '!'          shift, and go to state 43

    variable  go to state 44
    term      go to state 74


State 44

   33 variable: variable . '[' expression ']'
   34         | variable . '.' tIDENTIFIER
   58 term: variable .

    '['  shift, and go to state 54
    '.'  shift, and go to state 55

    $default  reduce using rule 58 (term)


State 45

   28 statement: IF expression . THEN statement
   29          | IF expression . THEN statement ELSE statement
   35 expression: expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . EQ expression
   41           | expression . NEQ expression
   42           | expression . GT expression
   43           | expression . LT expression
   44           | expression . GEQ expression
   45           | expression . LEQ expression
   46           | expression . AND expression
   47           | expression . '|' '|' expression

    EQ    shift, and go to state 75
    NEQ   shift, and go to state 76
    LEQ   shift, and go to state 77
    GEQ   shift, and go to state 78
    LT    shift, and go to state 79
    GT    shift, and go to state 80
    AND   shift, and go to state 81
    THEN  shift, and go to state 82
    '|'   shift, and go to state 83
    '+'   shift, and go to state 84
    '-'   shift, and go to state 85
    '*'   shift, and go to state 86
    '/'   shift, and go to state 87


State 46

   49 expression: term .

    $default  reduce using rule 49 (expression)


State 47

   30 statement: WHILE expression . DO statement
   35 expression: expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . EQ expression
   41           | expression . NEQ expression
   42           | expression . GT expression
   43           | expression . LT expression
   44           | expression . GEQ expression
   45           | expression . LEQ expression
   46           | expression . AND expression
   47           | expression . '|' '|' expression

    EQ   shift, and go to state 75
    NEQ  shift, and go to state 76
    LEQ  shift, and go to state 77
    GEQ  shift, and go to state 78
    LT   shift, and go to state 79
    GT   shift, and go to state 80
    AND  shift, and go to state 81
    DO   shift, and go to state 88
    '|'  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87


State 48

   23 statement: RETURN expression . ';'
   35 expression: expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . EQ expression
   41           | expression . NEQ expression
   42           | expression . GT expression
   43           | expression . LT expression
   44           | expression . GEQ expression
   45           | expression . LEQ expression
   46           | expression . AND expression
   47           | expression . '|' '|' expression

    EQ   shift, and go to state 75
    NEQ  shift, and go to state 76
    LEQ  shift, and go to state 77
    GEQ  shift, and go to state 78
    LT   shift, and go to state 79
    GT   shift, and go to state 80
    AND  shift, and go to state 81
    '|'  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    ';'  shift, and go to state 89


State 49

   24 statement: WRITE expression . ';'
   35 expression: expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . EQ expression
   41           | expression . NEQ expression
   42           | expression . GT expression
   43           | expression . LT expression
   44           | expression . GEQ expression
   45           | expression . LEQ expression
   46           | expression . AND expression
   47           | expression . '|' '|' expression

    EQ   shift, and go to state 75
    NEQ  shift, and go to state 76
    LEQ  shift, and go to state 77
    GEQ  shift, and go to state 78
    LT   shift, and go to state 79
    GT   shift, and go to state 80
    AND  shift, and go to state 81
    '|'  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    ';'  shift, and go to state 90


State 50

   25 statement: ALLOCATE variable . ';'
   26          | ALLOCATE variable . OF_LENGTH expression ';'
   33 variable: variable . '[' expression ']'
   34         | variable . '.' tIDENTIFIER

    OF_LENGTH  shift, and go to state 91
    ';'        shift, and go to state 92
    '['        shift, and go to state 54
    '.'        shift, and go to state 55


State 51

   31 statement: '{' statement_list . '}'

    '}'  shift, and go to state 93


State 52

   22 statement_list: statement statement_list .

    $default  reduce using rule 22 (statement_list)


State 53

   27 statement: variable '=' . expression ';'

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    variable    go to state 44
    expression  go to state 94
    term        go to state 46


State 54

   33 variable: variable '[' . expression ']'

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    variable    go to state 44
    expression  go to state 95
    term        go to state 46


State 55

   34 variable: variable '.' . tIDENTIFIER

    tIDENTIFIER  shift, and go to state 96


State 56

    3 head: FUNC tIDENTIFIER '(' par_decl_list . ')' ':' type

    ')'  shift, and go to state 97


State 57

   10 par_decl_list: var_decl_list .

    $default  reduce using rule 10 (par_decl_list)


State 58

    5 type: tIDENTIFIER .

    $default  reduce using rule 5 (type)


State 59

    6 type: INT .

    $default  reduce using rule 6 (type)


State 60

    7 type: BOOL .

    $default  reduce using rule 7 (type)


State 61

    8 type: ARRAY_OF . type

    tIDENTIFIER  shift, and go to state 58
    INT          shift, and go to state 59
    BOOL         shift, and go to state 60
    ARRAY_OF     shift, and go to state 61
    RECORD_OF    shift, and go to state 62

    type  go to state 98


State 62

    9 type: RECORD_OF . '{' var_decl_list '}'

    '{'  shift, and go to state 99


State 63

   18 declaration: TYPE tIDENTIFIER '=' type . ';'

    ';'  shift, and go to state 100


State 64

   14 var_type: tIDENTIFIER ':' type .

    $default  reduce using rule 14 (var_type)


State 65

   12 var_decl_list: var_type ',' var_decl_list .

    $default  reduce using rule 12 (var_decl_list)


State 66

    4 tail: END tIDENTIFIER .

    $default  reduce using rule 4 (tail)


State 67

   59 term: tIDENTIFIER '(' . act_list ')'

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    $default  reduce using rule 61 (act_list)

    variable    go to state 44
    expression  go to state 101
    term        go to state 46
    act_list    go to state 102
    exp_list    go to state 103


State 68

   35 expression: expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . EQ expression
   41           | expression . NEQ expression
   42           | expression . GT expression
   43           | expression . LT expression
   44           | expression . GEQ expression
   45           | expression . LEQ expression
   46           | expression . AND expression
   47           | expression . '|' '|' expression
   54 term: '|' expression . '|'

    EQ   shift, and go to state 75
    NEQ  shift, and go to state 76
    LEQ  shift, and go to state 77
    GEQ  shift, and go to state 78
    LT   shift, and go to state 79
    GT   shift, and go to state 80
    AND  shift, and go to state 81
    '|'  shift, and go to state 104
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87


State 69

   50 term: tINTCONST .
   51     | '-' tINTCONST .

    EQ        reduce using rule 50 (term)
    EQ        [reduce using rule 51 (term)]
    NEQ       reduce using rule 50 (term)
    NEQ       [reduce using rule 51 (term)]
    LEQ       reduce using rule 50 (term)
    LEQ       [reduce using rule 51 (term)]
    GEQ       reduce using rule 50 (term)
    GEQ       [reduce using rule 51 (term)]
    LT        reduce using rule 50 (term)
    LT        [reduce using rule 51 (term)]
    GT        reduce using rule 50 (term)
    GT        [reduce using rule 51 (term)]
    AND       reduce using rule 50 (term)
    AND       [reduce using rule 51 (term)]
    THEN      reduce using rule 50 (term)
    THEN      [reduce using rule 51 (term)]
    DO        reduce using rule 50 (term)
    DO        [reduce using rule 51 (term)]
    '|'       reduce using rule 50 (term)
    '|'       [reduce using rule 51 (term)]
    '+'       reduce using rule 50 (term)
    '+'       [reduce using rule 51 (term)]
    '-'       reduce using rule 50 (term)
    '-'       [reduce using rule 51 (term)]
    '*'       reduce using rule 50 (term)
    '*'       [reduce using rule 51 (term)]
    '/'       reduce using rule 50 (term)
    '/'       [reduce using rule 51 (term)]
    ')'       reduce using rule 50 (term)
    ')'       [reduce using rule 51 (term)]
    ','       reduce using rule 50 (term)
    ','       [reduce using rule 51 (term)]
    ';'       reduce using rule 50 (term)
    ';'       [reduce using rule 51 (term)]
    ']'       reduce using rule 50 (term)
    ']'       [reduce using rule 51 (term)]
    $default  reduce using rule 50 (term)


State 70

   35 expression: expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . EQ expression
   41           | expression . NEQ expression
   42           | expression . GT expression
   43           | expression . LT expression
   44           | expression . GEQ expression
   45           | expression . LEQ expression
   46           | expression . AND expression
   47           | expression . '|' '|' expression
   48           | '-' expression .

    EQ   shift, and go to state 75
    NEQ  shift, and go to state 76
    LEQ  shift, and go to state 77
    GEQ  shift, and go to state 78
    LT   shift, and go to state 79
    GT   shift, and go to state 80
    AND  shift, and go to state 81
    '|'  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87

    $default  reduce using rule 48 (expression)


State 71

   35 expression: expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   39           | '(' expression . ')'
   40           | expression . EQ expression
   41           | expression . NEQ expression
   42           | expression . GT expression
   43           | expression . LT expression
   44           | expression . GEQ expression
   45           | expression . LEQ expression
   46           | expression . AND expression
   47           | expression . '|' '|' expression
   52 term: '(' expression . ')'

    EQ   shift, and go to state 75
    NEQ  shift, and go to state 76
    LEQ  shift, and go to state 77
    GEQ  shift, and go to state 78
    LT   shift, and go to state 79
    GT   shift, and go to state 80
    AND  shift, and go to state 81
    '|'  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    ')'  shift, and go to state 105


State 72

   51 term: '-' . tINTCONST

    tINTCONST  shift, and go to state 106


State 73

   52 term: '(' . expression ')'

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    variable    go to state 44
    expression  go to state 107
    term        go to state 46


State 74

   53 term: '!' term .

    $default  reduce using rule 53 (term)


State 75

   40 expression: expression EQ . expression

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    variable    go to state 44
    expression  go to state 108
    term        go to state 46


State 76

   41 expression: expression NEQ . expression

    tINTCONST    shift, and go to state 35
    tIDENTIFIER  shift, and go to state 36
    TRUE         shift, and go to state 37
    FALSE        shift, and go to state 38
    _NULL        shift, and go to state 39
    '|'          shift, and go to state 40
    '-'          shift, and go to state 41
    '('          shift, and go to state 42
    '!'          shift, and go to state 43

    variable    go to state 44
    expression  go to state 109
    term        go to state 46


State 77

   45 expression: expression LEQ . expression
